Fix some metadata

--- a/dist.ini
+++ b/dist.ini
@@ -21,7 +21,8 @@ exclude_filename = README.md
 
 [MetaResources]
 bugtracker.web  = https://github.com/exodist/goto-file/issues
-repository.url  = https://github.com/exodist/goto-file
+repository.web  = https://github.com/exodist/goto-file
+repository.url  = https://github.com/exodist/goto-file.git
 repository.type = git
 
 [Prereqs]
